Resolves long-standing issue: _PersistentObjectEditPane now correctly inherits from superclass. This only means it also has the SemanticObjectPane class from the superclass, but that messed up layout. This is fixed by adding the class .persistentObjectButtonEditPane-contentPane to the "content" content panes in PersistentObjectButtonEditPane.css and persistentObjectDraggableEditPane.

--- a/ui/persistentObjectButtonEditPane/PersistentObjectButtonEditPane.css
+++ b/ui/persistentObjectButtonEditPane/PersistentObjectButtonEditPane.css
@@ -21,6 +21,10 @@
   padding: 0;
 }
 
+.persistentObjectButtonEditPane > .persistentObjectButtonEditPane-contentPane {
+  padding: 8px;
+}
+
 .persistentObjectButtonEditPane .dijitBorderContainer-dijitContentPane {
   /* the content panes */
   background-color: transparent;
